# furax-compsep-paper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: pypi-publish.yml
ResearchStatement/: main.tex  refs.bib
content/: 01-bench.slurm  01-bench_bcp.py  01-bench_clusters.py  02-distributed-gridding.py  02-distributed-gridding.slurm  02-validation-model.py  03-noise-model.py  03-validation-model.py  03-validation-model.slurm  04-distributed-gridding.py  04-distributed-gridding.slurm  05-PTEP-model.py  06-gibbs.py  07-R_estimation.py  07-plotting.py  07-reconstruction-plotting.py  07-single_patch.py  08-KMeans-model.py  08-R_estimation.py  08-r_estimation.py  09-R_estimation.py  80-illustraions.ipynb  80-illustraions.ipynb.REMOVED.git-id  80-plot_runs.ipynb  99-run_all_jobs.sh  99-slurm_runner.slurm  bench_bcp.py  bench_clusters.py  comp_sep.sh  comp_sep.slurm  generate_maps.py  gridding.py  illustraions.ipynb  illustraions.ipynb.REMOVED.git-id  run_all_jobs.sh  todo.md  toto.txt
data/: generate_maps.py  instruments.py  instruments.yaml  plotting.py
data/masks/: COM_PowerSpect_CMB-base-plikHM-TTTEEE-lowl-lowE-lensing-minimum-theory_R3.01.txt  GAL_PlanckMasks_64.npz  downgrade.py  july17_tensCls.dat.REMOVED.git-id
docs/: cli_reference.md  minimization.md  quick_start.md  r_analysis.md
notebooks/: 00_Tutorial_Overview.ipynb  00_fgbuster_vs_furax.ipynb  01_Clustering.ipynb  01_Clustering.ipynb.REMOVED.git-id  01_FGBuster_vs_FURAX_Comparison.ipynb  02_KMeans_Adaptive_Component_Separation.ipynb  02_ValidationModel.ipynb  02_gridding_comp_sep.ipynb  03_Clustering.ipynb  03_DistributedClusterFinder.ipynb  03_Multi_Resolution_Component_Separation.ipynb  03_PTEP_Multi_Resolution_Component_Separation.ipynb  04_DistributedClusterFinder.ipynb  04_EstimatingR.ipynb  04_Tensor_Scalar_Ratio_Estimation.ipynb  05_Estimating_r.ipynb  06_Optimizer_Benchmark.ipynb  80-illustraions.ipynb  80-plot_runs.ipynb  Cluster.py  README.md  bench.py  generate_maps.py
notebooks/masks/: GAL_PlanckMasks_512.npz
paper/: apssamp.bib  apssamp.pdf.REMOVED.git-id  apssamp.tex  build.sh
paper/figures/: cmb_recon.pdf.REMOVED.git-id  kmeans_clustering.pdf.REMOVED.git-id  kmeans_patch_layout.pdf.REMOVED.git-id  multires_patch_layout.pdf.REMOVED.git-id
publications/comments/: BLUEPRINT.md  CORRECTIONS_NEEDED.md  SUGGESTIONS.md  annot.txt  example.pdf.REMOVED.git-id  script.py
publications/paper/: furax_comp_sep.bib  furax_comp_sep.old.tex  furax_comp_sep.pdf.REMOVED.git-id  furax_comp_sep.tex  paper.pdf.REMOVED.git-id
publications/paper/figures/: cmb_recon.pdf.REMOVED.git-id  kmeans_patch_layout.pdf.REMOVED.git-id  multires_patch_layout.pdf.REMOVED.git-id  params_kmeans.pdf.REMOVED.git-id  params_multires.pdf.REMOVED.git-id
publications/poster/: biblio.bib  poster.pdf.REMOVED.git-id  poster.tex
publications/poster/figures/: FURAX-CS.svg.REMOVED.git-id  foregrounds.svg.REMOVED.git-id  mbb_index_map.pdf.REMOVED.git-id  params_KMeans.pdf.REMOVED.git-id
publications/poster/svg-inkscape/: FURAX-CS_svg-tex.pdf_tex  foregrounds_svg-tex.pdf.REMOVED.git-id  foregrounds_svg-tex.pdf_tex
publications/slides/figures/: mbb_index_map.png.REMOVED.git-id  patches_KMeans.pdf.REMOVED.git-id  patches_KMeans.png.REMOVED.git-id  r_likelihood_distribution.png.REMOVED.git-id  variance_likelihood_distributions.png.REMOVED.git-id
r_analysis/: __init__.py  caching.py  main.py  parser.py  plotting.py  r_estimate.py  residuals.py  run_management.py  utils.py
scripts/: 01_bench_clusters.py  06_gibbs.py  08_kmeans_model.py  distributed_gridding.py  ptep_model.py
slurm/runners/: 01-bench_illustrate.sh  02-multi-res.sh  03-gridding.sh  04-kmeans.sh  04-kmeans_set1_varying_BS.sh  04-kmeans_set2_varying_TD.sh  04-kmeans_set3_varying_BS_small.sh  04-kmeans_set4_varying_TD_small.sh  04-kmeans_set5_varying_BD.sh  05-validate.sh  05-validate_furax.sh  06-validate_fg.sh  06-validate_furax.sh  07-validate_fg.sh  07-validate_plot.sh  08-validate_rerun.sh  09-validate_plot.sh  10-tensor-scalar.sh  cache.sh  exrunner.sh  validate_k.sh
slurms/: run_all_jobs.sh  script_runner.sh  slurm_runner.slurm
src/: __init__.py
src/data/: grid_search_data.py
src/data/masks/: downgrade.py
src/furax_cs/: __init__.py  kmeans_clusters.py  logging_utils.py  multires_clusters.py  noise.py  optim.py
src/furax_cs/data/: __init__.py  generate_maps.py  grid_search_data.py  instruments.py  plotting.py  search_space.py  search_spaces_default.yaml
src/furax_cs/data/masks/: GAL_PlanckMasks_2048.npz  (+1 more)
src/furax_cs/optim/: __init__.py  active_set.py  minimize.py  solvers.py  utils.py
src/furax_cs/r_analysis/: README.md  __init__.py  caching.py  compute.py  logging_utils.py  main.py  parser.py  plotting.py  r_estimate.py  residuals.py  run_grep.py  snapshot.py  utils.py  validate.py
src/furax_cs/scripts/: __init__.py  bench_bcp.py  bench_clusters.py  distributed_gridding.py  fgbuster_model.py  gibbs.py  kmeans_model.py  noise_model.py  ptep_model.py  single_patch.py  validation_model.py
src/r_analysis/: caching.py  main.py  plotting.py
tests/: test_active_set_convergence.py  test_active_set_solver.py  test_run_grep.py
